--- a/pages/login.html
+++ b/pages/login.html
@@ -9,11 +9,15 @@
   <body>
     <div class="login-container">
       <h2>로그인</h2>
-      <form action="board.html">
-        <input type="text" placeholder="아이디" required />
-        <input type="password" placeholder="비밀번호" required />
-        <button type="submit">로그인</button>
-      </form>
+      <input type="text" id="username" placeholder="아이디 입력" required />
+      <input
+        type="password"
+        id="password"
+        placeholder="비밀번호 입력"
+        required
+      />
+      <button onclick="login()">로그인</button>
     </div>
+    <script src="/js/login.js"></script>
   </body>
 </html>
