--- a/pages/index.html
+++ b/pages/index.html
@@ -24,8 +24,17 @@
         border-right: 1px solid black;
         text-align: center;
       }
+      .table_td:last-child {
+        border-right: none;
+      }
+      .table_td > a {
+        text-decoration-line: none;
+        color: rgb(38, 38, 38);
+      }
       .table_td > a:hover {
-        transform: scale(1.2);
+        display: block;
+        transform: scale(1.1);
+        transition: 0.1s;
       }
     </style>
   </head>
