--- a/pages/index.html
+++ b/pages/index.html
@@ -36,6 +36,12 @@
         transform: scale(1.1);
         transition: 0.1s;
       }
+      #mainArea {
+        border: 0.5px solid black;
+        height: 800px;
+      }
+      #list {
+      }
     </style>
   </head>
   <body>
@@ -48,6 +54,9 @@
             <td class="table_td"><a href="">게시물 목록</a></td>
           </tr>
         </table>
+      </div>
+      <div id="mainArea">
+        <div id="list">본문영역</div>
       </div>
     </div>
   </body>
