--- a/pages/mypage.html
+++ b/pages/mypage.html
@@ -10,31 +10,61 @@
     <br />
     <div id="info">
       <h2>회원정보</h2>
-      <div>아이디</div>
+      <div style="display: flex">
+        <div id="ct">아이디</div>
+        <div id="content">KB IT's your life</div>
+      </div>
       <hr />
-      <div>이름</div>
+      <div style="display: flex">
+        <div id="ct">이름</div>
+        <div id="content">KB</div>
+      </div>
       <hr />
-      <div>이메일</div>
+      <div style="display: flex">
+        <div id="ct">이메일</div>
+        <div id="content">KB@gmail.com</div>
+      </div>
     </div>
     <br />
     <div id="post-management">
       <h2>게시글 관리</h2>
-      <div>작성글</div>
+      <div style="display: flex">
+        <div id="ct2">작성글</div>
+        <div id="content2"><input type="button" value=">" /></div>
+      </div>
       <hr />
-      <div>작성댓글</div>
+      <div style="display: flex">
+        <div id="ct2">작성댓글</div>
+        <div id="content2"><input type="button" value=">" /></div>
+      </div>
       <hr />
-      <div>댓글단 글</div>
+      <div style="display: flex">
+        <div id="ct2">댓글단 글</div>
+        <div id="content2"><input type="button" value=">" /></div>
+      </div>
       <hr />
-      <div>좋아요한 글</div>
+      <div style="display: flex">
+        <div id="ct2">좋아요한 글</div>
+        <div id="content2"><input type="button" value=">" /></div>
+      </div>
     </div>
     <br />
     <div id="info-management">
-      <h2>회원정보</h2>
-      <div>아이디</div>
+      <h2>회원정보 관리</h2>
+      <div style="display: flex">
+        <div id="ct2">정보 수정</div>
+        <div id="content2"><input type="button" value=">" /></div>
+      </div>
       <hr />
-      <div>이름</div>
+      <div style="display: flex">
+        <div id="ct2">로그아웃</div>
+        <div id="content2"><input type="button" value=">" /></div>
+      </div>
       <hr />
-      <div>이메일</div>
+      <div style="display: flex">
+        <div id="ct2">회원 탈퇴</div>
+        <div id="content2"><input type="button" value=">" /></div>
+      </div>
     </div>
   </body>
 </html>
