--- a/pages/index.html
+++ b/pages/index.html
@@ -49,9 +49,9 @@
       <div id="top_menu_bar_div">
         <table id="top_menu_bar_table">
           <tr>
-            <td class="table_td"><a href="">마이페이지</a></td>
+            <td class="table_td"><a href="mypage.html">마이페이지</a></td>
             <td class="table_td"><a href="login.html">로그인</a></td>
-            <td class="table_td"><a href="">게시물 목록</a></td>
+            <td class="table_td"><a href="list.html">게시물 목록</a></td>
           </tr>
         </table>
       </div>
